# teamsearch

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/teamsearch/: Cargo.toml  build.rs
crates/teamsearch/src/: cli.rs  crash.rs  lib.rs  main.rs  version.rs
crates/teamsearch/src/commands/: find.rs  lookup.rs  mod.rs  orphans.rs  version.rs
crates/teamsearch_matcher/: Cargo.toml
crates/teamsearch_matcher/src/: lib.rs
crates/teamsearch_utils/: Cargo.toml
crates/teamsearch_utils/src/: fs.rs  highlight.rs  lib.rs  lines.rs  logging.rs  thread_pool.rs  timers.rs
crates/teamsearch_workspace/: Cargo.toml
crates/teamsearch_workspace/src/: codeowners.rs  lib.rs  member.rs  resolver.rs  settings.rs
