[workspace]
members = [
  "crates/teamsearch*",
]

resolver = "2"

[workspace.package]
authors = ["Alexander Fedotov <alexander.fedotov.uk@gmail.com>"]
edition = "2024"


[workspace.dependencies]
teamsearch_utils = { path = "crates/teamsearch_utils" }
teamsearch_workspace = { path = "crates/teamsearch_workspace" }

anyhow = { version = "1.0.80" }
argfile = { version = "0.2.0" }
bitflags = { version = "2.5.0" }
clap = { version = "4.5.3", features = ["derive"] }
colored = { version = "2.1.0" }
crossbeam-channel = "0.5.1"
derive_more = "0.99.18"
globset = "0.4.14"
ignore = "0.4.22"
index_vec = "0.1.3"
itertools = "0.13.0"
log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
once_cell = "1.19.0"
parking_lot = "0.12"
path-absolutize = "3.1.1"
thin-vec = "0.2.13"
wild = { version = "2" }
