[workspace]
members = [
  "crates/teamsearch*",
]

resolver = "2"

[workspace.package]
authors = ["Alexander Fedotov <alexander.fedotov.uk@gmail.com>"]
edition = "2024"


[workspace.dependencies]
teamsearch_matcher = { path = "crates/teamsearch_matcher" }
teamsearch_utils = { path = "crates/teamsearch_utils" }
teamsearch_workspace = { path = "crates/teamsearch_workspace" }

annotate-snippets = "0.11.5"
anyhow = { version = "1.0.80" }
argfile = { version = "0.2.0" }
bitflags = { version = "2.5.0" }
clap = { version = "4.5.3", features = ["derive"] }
colored = { version = "2.1.0" }
derive_more = "0.99.18"
globset = "0.4.14"
grep-matcher = "0.1.7"
grep-regex = "0.1.13"
ignore = "0.4.22"
index_vec = "0.1.3"
itertools = "0.13.0"
log = { version = "0.4", features = ["kv_unstable", "kv_serde"] }
once_cell = "1.19.0"
parking_lot = "0.12"
path-absolutize = "3.1.1"
rayon = "1.5.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.113" }
thin-vec = "0.2.13"
wild = { version = "2" }

[profile.release]
opt-level = 3
lto = "fat"
debug-assertions = false
overflow-checks = false

# strip any symbols from the executable, this makes backtraces un-readable
strip = true

# set debug to true when profiling
debug = false
