cargo-features = ["edition2024"]

[package]
name = "teamsearch"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
teamsearch_utils = { workspace = true }
teamsearch_workspace = { workspace = true }
teamsearch_matcher = { workspace = true }

anyhow = { workspace = true }
argfile = { workspace = true }
clap = { workspace = true, features = ["derive", "env", "wrap_help"] }
colored = { workspace = true }
grep-regex = { workspace = true }
grep-matcher = { workspace = true }
grep-searcher = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
termcolor = { workspace = true }
wild = { workspace = true}
annotate-snippets = { workspace = true }
derive_more = { workspace = true }
