cargo-features = ["edition2024"]

[package]
name = "teamsearch_workspace"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
teamsearch_utils = { workspace = true }

anyhow = { workspace = true }
derive_more = { workspace = true }
log = { workspace = true }
