[package]
name = "teamsearch_workspace"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }

[dependencies]
teamsearch_utils = { workspace = true }

anyhow = { workspace = true }
derive_more = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
index_vec = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
